Fix menu z-index

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -77,6 +77,7 @@
     @include fixed(0, 0, 0, 0);
     opacity: 0;
     visibility: hidden;
+    z-index: 100;
     transition: all 0.25s ease-out;
 
     &--show {
