--- a/src/app/features/user/components/header-user/header-user.component.scss
+++ b/src/app/features/user/components/header-user/header-user.component.scss
@@ -26,7 +26,6 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  position: relative;
 }
 
 .container__txt {
